# KubeMOOC-Ops

./: .gitignore  MORNING_TASKS.md  README.md
.github/workflows/: deploy-function.yml
functions/deployment-function/: .env.example  .funcignore  Makefile  README.md  config.py  function_app.py  pyproject.toml  requirements.txt  requirements_update.txt
functions/deployment-function/models/: __init__.py  requests.py
functions/deployment-function/services/: __init__.py  deployment_service.py
functions/deployment-function/tests/: test_config.py  test_deployment_service.py
functions/deprovisioning-function/: .env.example  .funcignore  Makefile  README.md  config.py  deprovisioning_service.py  function_app.py  models_requests.py  pyproject.toml  requirements.txt
functions/deprovisioning-function/tests/: __init__.py  test_config.py  test_deprovisioning_service.py  test_models.py
functions/provisioning-function/: .env.example  .funcignore  README.md  config.py  function_app.py  local.settings.json  local.settings.json.example  pyproject.toml  requirements.txt
functions/provisioning-function/ProvisionEnvironment/: __init__.py  function.json
functions/provisioning-function/models/: requests.py
functions/provisioning-function/services/: provisioning_service.py
functions/provisioning-function/tests/: __init__.py  test_config.py  test_models.py
kubernetes/base/: deployment.yaml  service.yaml
kubernetes/overlays/feature/: http-route-patch.yaml  kustomization.yaml
kubernetes/overlays/production/: kustomization.yaml
